# bureaucrats-and-broomsticks

./: .gitignore  act3_linear_benchmark_summary_by_policy.txt  act3_release_bot_scan.txt  act3_release_scan.txt  final_act3_scan.txt  hedge_witch_linear_seed_3670010_trace.txt  pyproject.toml  requirements.txt  shop_inventory_1_references.txt  shop_inventory_2_act3_eligibility.txt  simulation_1000.json  simulation_1000_after_mimic_elite_patch.json  simulation_1000_diagnostics.json
dev_artifacts/: README.md
runs/: README.md
scripts/: analyze_benchmark.py  analyze_trace.py  audit_act2_pools.py  audit_act2_targets.py  audit_act_scaffold.py  audit_event_shop_mechanics.py  audit_relic_targets.py  benchmark_agents.py  benchmark_checkpointed_runners.py  benchmark_good_player.py  benchmark_linear_runners.py  checkpoint_class_runners.py  compare_agents.py  diagnose_agents.py  improve_class_runners.py  inspect_campaign_result_shape.py  rl_rollout.py  simulate_act2_sanity.py  simulate_campaign_sanity.py  simulate_runs.py  trace_seed.py  train_agent.py  train_class_runners.py  train_linear_class_runners.py
tests/: test_act5_divine_ledger_gauntlet.py  test_act_2_archives_bosses.py  test_act_2_archives_content.py  test_act_2_archives_elites.py  test_act_2_archives_enemy_variety.py  test_act_2_archives_events.py  test_act_2_archives_rewards_and_relics.py  test_act_2_class_relics_batch_1.py  test_act_2_class_relics_batch_2.py  test_act_2_class_relics_batch_3.py  test_act_2_events_and_shop_polish.py  test_act_2_general_relic_pool.py  test_act_2_reward_and_shop_weighting.py  (+70 more)
(+408 files in other folders)
